St 443 fixing table spacing (#393)
* fixed table spacing ST-443

* Made 'Number' Columns on Stake tables alight right ST-433

--- a/src/pages/stake/Validators.module.scss
+++ b/src/pages/stake/Validators.module.scss
@@ -45,9 +45,9 @@
   margin-right: 12px;
 
   .token__icon {
-    width: 50px;
-    height: 50px;
-    padding: 12px;
+    width: 40px;
+    height: 40px;
+    padding: 8px;
     border-radius: 50%;
     background: hsl(
       var(--button-default-bg-h),
@@ -60,9 +60,9 @@
     position: absolute;
     bottom: 0;
     right: 0;
-    width: 20px;
-    height: 20px;
-    padding: 2px;
+    width: 16px;
+    height: 16px;
+    padding: 1px;
     border-radius: 50%;
     background-color: var(--card-bg-muted);
   }
